--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -10,13 +10,12 @@ html{
 	margin: 0%;
 }
 body {
-	background-image:url(images/background.jpg);
+	background-image:url(/images/background.jpg);
 	positionung: absolute;
 	top: 0;
 	bottom: 0;
 	right: 0;
 	left: 0;
-	background-color: #0F9;
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 800px;
