--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -9,7 +9,7 @@ html{
 	margin: 0%;
 }
 body {
-	background-image:url(/images/background-3.jpg);
+	background-image:url(../images/background-3.jpg);
 	positionung: absolute;
 	top: 0;
 	bottom: 0;
@@ -46,8 +46,6 @@ body {
 }
 
 .Aboutme {
-	float: left;
-	max-width: 80px;
 	color:#FFF;
 }
 
